tests/fixtures/errors/invalid_nested_startuml_with_suffix.puml
@startuml First
A -> B : one
@startuml Second
B -> A : two
@enduml
